clusters/cl01tl/manifests/tubearchivist/HTTPRoute-tubearchivist.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tubearchivist
  labels:
    app.kubernetes.io/instance: tubearchivist
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: tubearchivist
    helm.sh/chart: tubearchivist-5.3.0
  annotations:
    gethomepage.dev/description: TubeArchivist
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Content
    gethomepage.dev/href: https://tubearchivist.alexlebens.dev/login
    gethomepage.dev/icon: sh-tube-archivist-light.webp
    gethomepage.dev/name: Youtube Archiver
    gethomepage.dev/siteMonitor: http://tubearchivist.tubearchivist:80
    gethomepage.dev/statusStyle: dot
    gethomepage.dev/weight: "350"
  namespace: tubearchivist
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "tubearchivist.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: tubearchivist
          namespace: tubearchivist
          port: 80
          weight: 1
      matches:
        - headers:
            - name: Authorization
              type: RegularExpression
              value: ^Token .*
        - method: OPTIONS
          path:
            type: PathPrefix
            value: /api
    - backendRefs:
        - group: ""
          kind: Service
          name: tubearchivist
          namespace: tubearchivist
          port: 4180
          weight: 1
